coredata model created!

--- a/AttendanceApp/Resources/Employees.plist
+++ b/AttendanceApp/Resources/Employees.plist
@@ -88,7 +88,7 @@
 		<key>deparment</key>
 		<string>Marketing</string>
 		<key>name</key>
-		<string>Eibhlin</string>
+		<string>Sean</string>
 	</dict>
 	<dict>
 		<key>employee_id</key>
